Removing deployment and version specific setup instructions.